Реализовать ТЗ 2 этапа дипломного проекта